--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 #root {
   width: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .container {
@@ -20,6 +21,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   gap: 10px;
+  margin-bottom: 3rem;
 }
 
 .alphabetLetter {
@@ -27,7 +29,7 @@
   font-size: 2rem;
   display: flex;
   border: 1px solid #000;
-  padding: 1rem 2rem;
+  padding: .8rem 1.5rem;
   justify-content: center;
   cursor: pointer;
 }
